src/data.txt
javac -J-Xbootclasspath/p:/homes/gws/csgordon/research/guitypes/checker/binary/jsr308-all.jar -Xmaxerrs 999 -cp /homes/gws/csgordon/research/guitypes/checker/dist/lib/guitypes-20120807.jar:/homes/gws/csgordon/research/experiments/EclipseRunner/lib/mockito-all-1.8.2.jar:/homes/gws/csgordon/research/experiments/EclipseRunner/lib/junit-4.8.1.jar:/usr/lib/eclipse/plugins/org.eclipse.ui.navigator_3.5.100.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.ui.ide_3.7.0.dist.jar:/usr/lib/eclipse/dropins/jdt/plugins/org.eclipse.jdt.ui_3.7.0.dist.jar:/usr/lib/eclipse/dropins/jdt/plugins/org.eclipse.jdt.core_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.ui.navigator.resources_3.4.300.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.debug.core_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.debug.ui_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.core.resources_3.7.100.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.swt.gtk.linux.x86_64_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.ui_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.swt_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.jface_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.core.commands_3.6.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.ui.workbench_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.core.runtime_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.osgi_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.equinox.common_3.6.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.core.jobs_3.5.100.dist.jar:/usr/lib/ecliplse/plugins/org.eclipse.core.runtime.compatibility.registry_3.5.0.dist/runtime_registry_compatibility.jar:/usr/lib/eclipse/plugins/org.eclipse.equinox.registry_3.5.100.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.equinox.preferences_3.4.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.core.contenttype_3.4.100.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.equinox.app_1.3.100.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.ui.forms_3.5.100.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.ui.workbench.texteditor_3.7.0.dist.jar:/usr/lib/eclipse/plugins/org.eclipse.core.net_1.2.100.dist.jar -processor guitypes.checkers.GUIEffectsChecker
./com/eclipserunner/model/ICategoryNodeChangeListener.java ./com/eclipserunner/model/adapters/RunnerModelJdtSelectionListenerAdapter.java ./com/eclipserunner/model/adapters/RunnerModelTreeWithTypesAdapter.java ./com/eclipserunner/model/adapters/RunnerModelTreeAdapter.java ./com/eclipserunner/model/adapters/RunnerModelLaunchConfigurationListenerAdapter.java ./com/eclipserunner/model/common/AbstractFilter.java ./com/eclipserunner/model/common/RunnerModelDelegatingDecorator.java ./com/eclipserunner/model/common/CategoryDelegatingDecorator.java ./com/eclipserunner/model/IBookmarkable.java ./com/eclipserunner/model/filters/RunnerModelFilteringDecorator.java ./com/eclipserunner/model/filters/CategoryFilteringDecorator.java ./com/eclipserunner/model/filters/BookmarkFilter.java ./com/eclipserunner/model/filters/ProjectFilter.java ./com/eclipserunner/model/filters/DeletedProjectsFilter.java ./com/eclipserunner/model/filters/DefaultCategoryFilter.java ./com/eclipserunner/model/filters/WorkingSetFilter.java ./com/eclipserunner/model/filters/ClosedProjectsFilter.java ./com/eclipserunner/model/IDroppable.java ./com/eclipserunner/model/IModelChangeListener.java ./com/eclipserunner/model/ILaunchNodeChangeListener.java ./com/eclipserunner/model/INodeSelection.java ./com/eclipserunner/model/impl/LaunchTypeNode.java ./com/eclipserunner/model/impl/CategoryNode.java ./com/eclipserunner/model/impl/RunnerModel.java ./com/eclipserunner/model/impl/LaunchNode.java ./com/eclipserunner/model/INodeFilter.java ./com/eclipserunner/model/RunnerModelProvider.java ./com/eclipserunner/model/ILaunchNode.java ./com/eclipserunner/model/IActionEnablement.java ./com/eclipserunner/model/ILaunchTypeNode.java ./com/eclipserunner/model/IRunnerModel.java ./com/eclipserunner/model/ICategoryNode.java ./com/eclipserunner/model/IFilteredRunnerModel.java ./com/eclipserunner/utils/SelectionUtils.java ./com/eclipserunner/Messages.java ./com/eclipserunner/RunnerPlugin.java ./com/eclipserunner/PreferenceConstants.java ./com/eclipserunner/RunnerStateExternalizer.java ./com/eclipserunner/views/TreeMode.java ./com/eclipserunner/views/impl/RunnerView.java ./com/eclipserunner/views/impl/RunnerViewSelection.java ./com/eclipserunner/views/impl/LaunchTreeLabelProvider.java ./com/eclipserunner/views/actions/ToggleTreeModeAction.java ./com/eclipserunner/views/actions/AbstractLaunchAction.java ./com/eclipserunner/views/actions/ToggleFilterAction.java ./com/eclipserunner/views/actions/Image.java ./com/eclipserunner/views/actions/RemoveConfigOrCategoryAction.java ./com/eclipserunner/views/actions/BookmarkAction.java ./com/eclipserunner/views/actions/ToggleRunModeAction.java ./com/eclipserunner/views/actions/ExpandAllAction.java ./com/eclipserunner/views/actions/AddNewCategoryAction.java ./com/eclipserunner/views/actions/OpenItemAction.java ./com/eclipserunner/views/actions/MoveToCategoryAction.java ./com/eclipserunner/views/actions/LaunchConfigurationAction.java ./com/eclipserunner/views/actions/CollapseAllAction.java ./com/eclipserunner/views/actions/BaseRunnerAction.java ./com/eclipserunner/views/actions/LaunchActionBuilder.java ./com/eclipserunner/views/actions/RenameConfigOrCategoryAction.java ./com/eclipserunner/views/actions/ShowLaunchConfigurationsDialogAction.java ./com/eclipserunner/views/validators/CategoryNameValidator.java ./com/eclipserunner/views/validators/LaunchConfigurationNameValidator.java ./com/eclipserunner/views/IRunnerView.java ./com/eclipserunner/ui/dnd/RunnerViewDropListener.java ./com/eclipserunner/ui/dnd/RunnerViewDragListener.java ./eclipserunner/Activator.java
./com/eclipserunner/views/impl/RunnerView.java:419: error: Calling a method with UIEffect effect from a context limited to SafeEffect effects.
		/* BUG -- Colin Gordon, confirming Sai's find */getViewer().refresh();
		                                                                   ^
1 error
